--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 <head>
   <title></title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 
+<header class="headerYeah">
+    <h1>Banking Form</h1>
+</header><!-- /header -->
 
 <section class="bankingform">
 
